# docs/swagger.json
@@ -343,7 +343,7 @@
                 }
             }
         },
-        "/bill/template": {
+        "/bill/ledger": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -354,7 +354,7 @@
                 "tags": [
                     "bill"
                 ],
-                "summary": "模板列表",
+                "summary": "账本列表",
                 "parameters": [
                     {
                         "type": "integer",
@@ -395,7 +395,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/db.BillTemplate"
+                                                "$ref": "#/definitions/db.BillLedger"
                                             }
                                         }
                                     }
@@ -415,7 +415,7 @@
                 "tags": [
                     "bill"
                 ],
-                "summary": "更新模板",
+                "summary": "更新账本",
                 "parameters": [
                     {
                         "description": "request payload",
@@ -423,7 +423,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/template.updateParam"
+                            "$ref": "#/definitions/ledger.updateParam"
                         }
                     }
                 ],
@@ -439,7 +439,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/db.BillTemplate"
+                                            "$ref": "#/definitions/db.BillLedger"
                                         }
                                     }
                                 }
@@ -458,7 +458,7 @@
                 "tags": [
                     "bill"
                 ],
-                "summary": "添加模板",
+                "summary": "添加账本",
                 "parameters": [
                     {
                         "description": "request payload",
@@ -466,7 +466,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/template.createParam"
+                            "$ref": "#/definitions/ledger.createParam"
                         }
                     }
                 ],
@@ -482,7 +482,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/db.BillTemplate"
+                                            "$ref": "#/definitions/db.BillLedger"
                                         }
                                     }
                                 }
@@ -501,7 +501,187 @@
                 "tags": [
                     "bill"
                 ],
-                "summary": "删除模板",
+                "summary": "删除账本",
+                "parameters": [
+                    {
+                        "description": "request payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/ctx.IDList"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ctx.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/bill/type": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "分类列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "size",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id[]",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "created_at",
+                        "name": "created_at[]",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/ctx.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/db.BillType"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "更新分类",
+                "parameters": [
+                    {
+                        "description": "request payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Type.updateParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/ctx.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/db.BillType"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "添加分类",
+                "parameters": [
+                    {
+                        "description": "request payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Type.createParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/ctx.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/db.BillType"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bill"
+                ],
+                "summary": "删除分类",
                 "parameters": [
                     {
                         "description": "request payload",
@@ -525,6 +705,42 @@
         }
     },
     "definitions": {
+        "Type.createParam": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "note": {
+                    "type": "string",
+                    "maxLength": 200
+                }
+            }
+        },
+        "Type.updateParam": {
+            "type": "object",
+            "required": [
+                "id",
+                "name"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 20
+                },
+                "note": {
+                    "type": "string",
+                    "maxLength": 200
+                }
+            }
+        },
         "ctx.IDList": {
             "type": "object",
             "required": [
@@ -578,7 +794,7 @@
                 }
             }
         },
-        "db.BillTemplate": {
+        "db.BillLedger": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -587,9 +803,25 @@
                 "id": {
                     "type": "integer"
                 },
-                "kind": {
-                    "description": "type(分类) ledger(账本)",
+                "name": {
                     "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "times": {
+                    "type": "integer"
+                }
+            }
+        },
+        "db.BillType": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -683,24 +915,12 @@
                 }
             }
         },
-        "template.createParam": {
+        "ledger.createParam": {
             "type": "object",
             "required": [
-                "kind",
                 "name"
             ],
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "kind": {
-                    "description": "type(分类) ledger(账本)",
-                    "type": "string",
-                    "enum": [
-                        "type",
-                        "ledger"
-                    ]
-                },
                 "name": {
                     "type": "string",
                     "maxLength": 20
@@ -711,27 +931,15 @@
                 }
             }
         },
-        "template.updateParam": {
+        "ledger.updateParam": {
             "type": "object",
             "required": [
                 "id",
-                "kind",
                 "name"
             ],
             "properties": {
-                "created_at": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "integer"
-                },
-                "kind": {
-                    "description": "type(分类) ledger(账本)",
-                    "type": "string",
-                    "enum": [
-                        "type",
-                        "ledger"
-                    ]
                 },
                 "name": {
                     "type": "string",
