# service/bill/type/create.go
@@ -1,8 +1,6 @@
-package template
+package Type
 
 import (
-	"time"
-
 	"github.com/yahuian/beyond/ctx"
 	"github.com/yahuian/beyond/db"
 	"github.com/yahuian/gox/errorx"
@@ -10,19 +8,17 @@ import (
 )
 
 type createParam struct {
-	Name      string    `json:"name" validate:"required,max=20"`
-	Kind      string    `json:"kind" validate:"required,oneof=type ledger"` // type(分类) ledger(账本)
-	Note      string    `json:"note" validate:"max=200"`
-	CreatedAt time.Time `json:"created_at"`
+	Name string `json:"name" validate:"required,max=20"`
+	Note string `json:"note" validate:"max=200"`
 }
 
-// @Summary 添加模板
+// @Summary 添加分类
 // @Tags    bill
 // @Accept  json
 // @Produce json
 // @param   payload body     createParam true "request payload"
-// @Success 200     {object} ctx.Response{data=db.BillTemplate}
-// @Router  /bill/template [post]
+// @Success 200     {object} ctx.Response{data=db.BillType}
+// @Router  /bill/type [post]
 func Create(c *ctx.Context) {
 	var param createParam
 	if err := c.BindJSON(&param); err != nil {
@@ -34,11 +30,9 @@ func Create(c *ctx.Context) {
 		return
 	}
 
-	data := &db.BillTemplate{
-		Name:      param.Name,
-		Kind:      param.Kind,
-		Note:      param.Note,
-		CreatedAt: param.CreatedAt,
+	data := &db.BillType{
+		Name: param.Name,
+		Note: param.Note,
 	}
 
 	if err := db.Create(data); err != nil {
@@ -51,7 +45,7 @@ func Create(c *ctx.Context) {
 }
 
 func checkName(c *ctx.Context, name string) error {
-	count, err := db.Count[db.BillTemplate]("name = ?", name)
+	count, err := db.Count[db.BillType]("name = ?", name)
 	if err != nil {
 		logx.Errorf("%+v", err)
 		c.InternalErr(err)
